# serverless-xmpp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docker/: docker-compose.yml
docker/prosody/: prosody.cfg.lua
docs/: addressbook-sync.md  api.md  architecture.md  display-walkthrough-tui.md  display-walkthrough-web.md  multi-client-testing.md  p2p-serverless.md  packaging.md  quick-start.md  text-interface-design.md  troubleshooting-displays.md  web-interface-design.md
docs/diagrams/: README.md
docs/diagrams/src/: architecture.puml  client-connection.puml  shutdown.puml  startup.puml
examples/: addressbook.p2p-alice.json  addressbook.p2p-bob.json  addressbook.sample.json  config.p2p-alice.toml  config.p2p-bob.toml  config.sample.toml
packaging/: launcher.py  xmpp-p2p-chat.spec
scripts/: build-release.sh  capture-screenshots.sh  capture-tui-screenshot.py  capture-web-screenshot.py  render-diagrams.py  seed-screenshot-data.py  test-multi-client.sh  test-p2p-live.py
src/xmpp_p2p_chat/: __init__.py
src/xmpp_p2p_chat/common/: __init__.py  (+9 more)
tests/: conftest.py  test_addressbook.py  test_addressbook_hash.py  test_addressbook_sync.py  test_api.py  test_config.py  test_credentials_session.py  test_direct_p2p.py  test_display_failures.py  test_e2e_integration.py  test_mdns.py  test_persistence.py  test_sanitize.py  test_security.py  test_structured_logging.py  test_text_ui_display.py  test_text_ui_failures.py  test_xmpp_resilience.py
web_ui/: .env.example  index.html  package-lock.json  package.json  vite.config.js
web_ui/src/: App.svelte  app.css
(+38 files in other folders)
